# test-project

./: README.md  docker-compose.yml
api/: .env-template  README.md  manage.py  pyproject.toml
api/first_test/django/: asgi.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
front/: README.md  nuxt.config.js  package-lock.json  package.json
infra/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
